--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Yogabest - Free Bootstrap 4 Template by Colorlib</title>
+  <title>Yogabest - Every posture as a prayer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700&amp;display=swap"
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/css-magnific-popup.css">
   <link rel="stylesheet" href="css/css-flaticon.css">
   <link rel="stylesheet" href="css/css-style.css">
+  <link rel="icon" href="images/ithiyoga.png" type="image/icon type">
 </head>
 
 <body>
@@ -22,9 +23,9 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-12 col-md d-flex align-items-center">
-          <p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span
-              class="mailus">email us:</span> <a href="#"><span class="__cf_email__"
-                data-cfemail="e98c848880859a888499858ca98c84888085c78a8684">[email&nbsp;protected]</span></a></p>
+          <p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+91 8105589596</a> or <span
+              class="mailus">email us:</span> <a href="#"><span class="__cf_email__">shravyashageru@gmail.com</span></a>
+          </p>
         </div>
         <div class="col-12 col-md d-flex justify-content-md-end">
           <div class="social-media">
@@ -45,7 +46,7 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Yogabest</a>
+      <a class="navbar-brand" href="index.html">ithiyoga</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="fa fa-bars"></span> Menu
@@ -71,10 +72,11 @@
       <div class="row no-gutters slider-text js-fullheight align-items-center" data-scrollax-parent="true">
         <div class="col-md-6 ftco-animate">
           <div class="mb-5">
-            <span class="subheading">Welcome to Yogabest</span>
-            <h1 class="mb-4">Yoga Enhances Your Life</h1>
-            <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-              there live the blind texts. Separated they live in Bookmarksgrove.</p>
+            <span class="subheading">Welcome to ithiyoga</span>
+            <h1 class="mb-4">Discover Harmony and Wellness Through Yoga </h1>
+            <p class="mb-4">Are you ready to embark on a transformative journey of self-discovery, health, and inner
+              peace? At Ithi,
+              we invite you to join our global community of yoga enthusiasts from all corners of the world.</p>
           </div>
         </div>
         <div class="col-md-6 d-flex align-items-center justify-content-center">
@@ -929,7 +931,11 @@
   <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854"
     integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg=="
     data-cf-beacon='{"rayId":"800c4dd23fb1306f","version":"2023.8.0","b":1,"token":"cd0b4b3a733644fc843ef0b185f98241","si":100}'
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+    </script>
+  <script type="text/javascript">
+    !function (t, e) { t.artibotApi = { l: [], t: [], on: function () { this.l.push(arguments) }, trigger: function () { this.t.push(arguments) } }; var a = !1, i = e.createElement("script"); i.async = !0, i.type = "text/javascript", i.src = "https://app.artibot.ai/loader.js", e.getElementsByTagName("head").item(0).appendChild(i), i.onreadystatechange = i.onload = function () { if (!(a || this.readyState && "loaded" != this.readyState && "complete" != this.readyState)) { new window.ArtiBot({ i: "402b1dda-06fa-494f-a69f-dc7566fb1b76" }); a = !0 } } }(window, document);
+  </script>
 </body>
 
 </html>
