Content changes with chatbot and calendly link

--- a/index.html
+++ b/index.html
@@ -94,59 +94,7 @@
       </div>
     </div>
   </section>
-  <section class="ftco-section ftco-services bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-          <div class="services">
-            <div class="d-flex align-items-center mb-4">
-              <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
-                  class="flaticon-sunrise"></span></div>
-              <h3 class="heading mb-0">Welcome to <br>ithi</h3>
-            </div>
-            <div class="media-body">
-              <p>At ithi, we are passionate about sharing the ancient wisdom of yoga with people of all backgrounds and
-                skill levels. With experienced instructors and a diverse range of classes, we offer a holistic approach
-                to yoga, helping you achieve physical, mental, and spiritual balance.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-          <div class="services">
-            <div class="d-flex align-items-center mb-4">
-              <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
-                  class="flaticon-trainer"></span></div>
-              <h3 class="heading mb-0">Why Choose <br>ithi?</h3>
-            </div>
-            <div class="media-body">
-              <p>Experienced Instructors: Our certified instructors bring years of experience and expertise to guide you
-                on your yoga journey.
-                Community: Join a supportive global community of yoga practitioners who share your passion for health
-                and wellness.
-                Holistic Wellness: We believe in the holistic approach to yoga, addressing physical, mental, and
-                emotional well-being.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-          <div class="services">
-            <div class="d-flex align-items-center mb-4">
-              <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
-                  class="flaticon-lotus-flower"></span></div>
-              <h3 class="heading mb-0">Global Yoga <br>Community</h3>
-            </div>
-            <div class="media-body">
-              <p>Yoga transcends borders, languages, and cultures. As an international yoga center, we take pride in our
-                diverse community. Our students and instructors come from various countries and backgrounds, creating a
-                rich tapestry of experiences and perspectives. We celebrate this diversity and believe it enriches the
-                yoga experience for everyone.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="ftco-section ftco-no-pb ftco-about img">
+  <section class="ftco-section ftco-no-pb ftco-about img bg-light">
     <div class="container">
       <div class="row d-flex">
         <div class="col-md-12 about-intro">
@@ -167,14 +115,12 @@
               <div class="row justify-content-start pb-3">
                 <div class="col-md-12 heading-section ftco-animate">
                   <span class="subheading">Reslish in Nature's Natural Gift</span>
-                  <h2 class="mb-4">Life in Divine Yoga</h2>
+                  <h2 class="mb-4">Welcome to ithi</h2>
                   <div class="d-flex about">
                     <div class="icon"><span class="flaticon-lotus-flower"></span></div>
                     <h3>"I am standing on my own altar, The Poses are my prayers"</h3>
                   </div>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                    language ocean.</p>
+                  <p>At ithi, we are passionate about sharing the ancient wisdom of yoga with people of all backgrounds and skill levels. With experienced instructors and a diverse range of classes, we offer a holistic approach to yoga, helping you achieve physical, mental, and spiritual balance.</p>
                   <!-- <div class="d-flex video-about align-items-center mt-md-4">
                     <a href="#" class="video img d-flex align-items-center justify-content-center"
                       style="background-image: url(images/about-2.jpg);">
@@ -298,7 +244,7 @@
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
                   <a href=""
-                  onclick="Calendly.initPopupWidget({url: 'https://calendly.com/iagrawalshubham/30min'});return false;"><span
+                  onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
                     class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
@@ -315,7 +261,7 @@
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
                   <a href=""
-                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/iagrawalshubham/30min'});return false;"><span
+                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
                       class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
@@ -332,7 +278,7 @@
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
                   <a href=""
-                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/iagrawalshubham/30min'});return false;"><span
+                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
                       class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
@@ -349,7 +295,7 @@
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
                   <a href=""
-                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/iagrawalshubham/30min'});return false;"><span
+                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
                       class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
@@ -366,7 +312,7 @@
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
                   <a href=""
-                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/iagrawalshubham/30min'});return false;"><span
+                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
                       class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
@@ -383,7 +329,7 @@
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
                   <a href=""
-                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/iagrawalshubham/30min'});return false;"><span
+                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
                       class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
                   <!-- <a href="#"><span class="fa fa-calendar mr-1"></span>Book Free Sessions</a> <br> -->
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
@@ -396,7 +342,60 @@
       </div>
     </div>
   </section>
-  <section class="ftco-section ftco-no-pt ftco-no-pb testimony-section bg-light">
+
+  <section class="ftco-section ftco-services bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+          <div class="services">
+            <div class="d-flex align-items-center mb-4">
+              <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
+                  class="flaticon-sunrise"></span></div>
+              <h3 class="heading mb-0">Welcome to <br>ithi</h3>
+            </div>
+            <div class="media-body">
+              <p>At ithi, we are passionate about sharing the ancient wisdom of yoga with people of all backgrounds and
+                skill levels. With experienced instructors and a diverse range of classes, we offer a holistic approach
+                to yoga, helping you achieve physical, mental, and spiritual balance.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+          <div class="services">
+            <div class="d-flex align-items-center mb-4">
+              <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
+                  class="flaticon-trainer"></span></div>
+              <h3 class="heading mb-0">Why Choose <br>ithi?</h3>
+            </div>
+            <div class="media-body">
+              <p>Experienced Instructors: Our certified instructors bring years of experience and expertise to guide you
+                on your yoga journey.
+                Community: Join a supportive global community of yoga practitioners who share your passion for health
+                and wellness.
+                Holistic Wellness: We believe in the holistic approach to yoga, addressing physical, mental, and
+                emotional well-being.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+          <div class="services">
+            <div class="d-flex align-items-center mb-4">
+              <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
+                  class="flaticon-lotus-flower"></span></div>
+              <h3 class="heading mb-0">Global Yoga <br>Community</h3>
+            </div>
+            <div class="media-body">
+              <p>Yoga transcends borders, languages, and cultures. As an international yoga center, we take pride in our
+                diverse community. Our students and instructors come from various countries and backgrounds, creating a
+                rich tapestry of experiences and perspectives. We celebrate this diversity and believe it enriches the
+                yoga experience for everyone.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="ftco-section ftco-no-pt ftco-no-pb testimony-section">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -949,9 +948,7 @@
     data-cf-beacon='{"rayId":"800c4dd23fb1306f","version":"2023.8.0","b":1,"token":"cd0b4b3a733644fc843ef0b185f98241","si":100}'
     crossorigin="anonymous">
     </script>
-  <script type="text/javascript">
-    !function (t, e) { t.artibotApi = { l: [], t: [], on: function () { this.l.push(arguments) }, trigger: function () { this.t.push(arguments) } }; var a = !1, i = e.createElement("script"); i.async = !0, i.type = "text/javascript", i.src = "https://app.artibot.ai/loader.js", e.getElementsByTagName("head").item(0).appendChild(i), i.onreadystatechange = i.onload = function () { if (!(a || this.readyState && "loaded" != this.readyState && "complete" != this.readyState)) { new window.ArtiBot({ i: "402b1dda-06fa-494f-a69f-dc7566fb1b76" }); a = !0 } } }(window, document);
-  </script>
+  <script type="text/javascript">!function(t,e){t.artibotApi={l:[],t:[],on:function(){this.l.push(arguments)},trigger:function(){this.t.push(arguments)}};var a=!1,i=e.createElement("script");i.async=!0,i.type="text/javascript",i.src="https://app.artibot.ai/loader.js",e.getElementsByTagName("head").item(0).appendChild(i),i.onreadystatechange=i.onload=function(){if(!(a||this.readyState&&"loaded"!=this.readyState&&"complete"!=this.readyState)){new window.ArtiBot({i:"b92ba74d-e6a9-4199-924b-b8d8fc4591d4"});a=!0}}}(window,document);</script>
 </body>
 
 </html>
