--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
 										id="contactForm" name="contactForm" class="contactForm">
 										<div class="row">
 											<input type="hidden" name="_next"
-												value="http://localhost/ithiyoga/contact.html">
+												value="https://shubh261096.github.io/ithiyoga/contact.html">
 											<input type="hidden" name="_captcha" value="false">
 											<div class="col-md-6">
 												<div class="form-group">
