Added popup for qoute

--- a/contact.html
+++ b/contact.html
@@ -143,6 +143,7 @@
 											<input type="hidden" name="_next"
 												value="https://shubh261096.github.io/ithiyoga/contact.html">
 											<input type="hidden" name="_captcha" value="false">
+											<input type="hidden" name="_template" value="table">
 											<div class="col-md-6">
 												<div class="form-group">
 													<label class="label" for="name">Full Name</label>
