--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="css/css-style.css">
   <link rel="stylesheet" href="css/dev.css">
   <link rel="icon" href="images/ithiyoga.png" type="image/icon type">
-  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+  <!-- <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet"> -->
+  <!-- <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script> -->
 
   <script>
     // Function to open the iframe popup
@@ -90,7 +90,8 @@
           <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
           <!-- <li class="nav-item"><a href="about.html" class="nav-link">About</a></li> -->
           <!-- <li class="nav-item"><a href="trainer.html" class="nav-link">Trainer</a></li> -->
-          <li class="nav-item"><a href="classes.html" class="nav-link">Classes</a></li>
+          <li class="nav-item"><a href="https://ithiyoga.zohobookings.in/#/customer/ithiyoga"
+              class="nav-link">Classes</a></li>
           <!-- <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li> -->
           <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -215,7 +216,7 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-lg-3 d-flex counter-wrap ftco-animate">
+        <!-- <div class="col-md-6 col-lg-3 d-flex counter-wrap ftco-animate">
           <div class="block-18 mb-xl-0 mb-2 d-flex align-items-center">
             <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-trainer"></span>
             </div>
@@ -224,33 +225,33 @@
               <span>Yoga Classes</span>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 d-flex counter-wrap ftco-animate">
+        </div> -->
+        <div class="col-md-6 col-lg-4 d-flex counter-wrap ftco-animate">
           <div class="block-18 mb-xl-0 mb-2 d-flex align-items-center">
             <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-yoga-mat"></span>
             </div>
             <div class="text pl-3">
-              <strong class="number" data-number="1000">0</strong>
+              <strong class="number" data-number="5000">0</strong>
               <span>Yoga Conducted</span>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 d-flex counter-wrap ftco-animate">
+        <div class="col-md-6 col-lg-4 d-flex counter-wrap ftco-animate">
           <div class="block-18 mb-xl-0 mb-2 d-flex align-items-center">
             <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-yoga-1"></span>
             </div>
             <div class="text pl-3">
-              <strong class="number" data-number="65">0</strong>
+              <strong class="number" data-number="6">0</strong>
               <span>Years of Experienced</span>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 d-flex counter-wrap ftco-animate">
+        <div class="col-md-6 col-lg-4 d-flex counter-wrap ftco-animate">
           <div class="block-18 mb-xl-0 mb-2 d-flex align-items-center">
             <div class="icon d-flex align-items-center justify-content-center"><span
                 class="flaticon-mindfulness"></span></div>
             <div class="text pl-3">
-              <strong class="number" data-number="71650">0</strong>
+              <strong class="number" data-number="1000">0</strong>
               <span>Happy Customers</span>
             </div>
           </div>
@@ -287,9 +288,8 @@
 
     <!-- Iframe container -->
     <div class="iframe-container">
-      <iframe width='100%' height='750px'
-        src='https://ithiyoga.zohobookings.in/portal-embed#/customer/202457000000030054' frameborder='0'
-        allowfullscreen=''> </iframe>
+      <iframe width='100%' height='750px' src='https://ithiyoga.zohobookings.in/portal-embed#/customer/ithiyoga'
+        frameborder='0' allowfullscreen=''> </iframe>
     </div>
   </div>
 
@@ -329,9 +329,11 @@
               <div class="meta">
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
-                  <a href=""
+                  <a href="" onclick="openIframePopup(); return false;"><span class="fa fa-calendar mr-1"></span>Book
+                    Free Sessions</a>
+                  <!-- <a href=""
                     onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
-                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
+                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a> -->
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
               </div>
@@ -346,9 +348,11 @@
               <div class="meta">
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
-                  <a href=""
+                  <a href="" onclick="openIframePopup(); return false;"><span class="fa fa-calendar mr-1"></span>Book
+                    Free Sessions</a>
+                  <!-- <a href=""
                     onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
-                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
+                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a> -->
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
               </div>
@@ -363,9 +367,11 @@
               <div class="meta">
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
-                  <a href=""
+                  <a href="" onclick="openIframePopup(); return false;"><span class="fa fa-calendar mr-1"></span>Book
+                    Free Sessions</a>
+                  <!-- <a href=""
                     onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
-                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
+                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a> -->
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
               </div>
@@ -380,9 +386,11 @@
               <div class="meta">
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
-                  <a href=""
+                  <a href="" onclick="openIframePopup(); return false;"><span class="fa fa-calendar mr-1"></span>Book
+                    Free Sessions</a>
+                  <!-- <a href=""
                     onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
-                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
+                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a> -->
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
               </div>
@@ -397,9 +405,11 @@
               <div class="meta">
                 <p>
                   <!-- <a href="#"><span class="fa fa-user mr-1"></span>Joe Doe</a> -->
-                  <a href=""
+                  <a href="" onclick="openIframePopup(); return false;"><span class="fa fa-calendar mr-1"></span>Book
+                    Free Sessions</a>
+                  <!-- <a href=""
                     onclick="Calendly.initPopupWidget({url: 'https://calendly.com/teamithiyoga/30min'});return false;"><span
-                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a>
+                      class="fa fa-calendar mr-1"></span>Book Free Sessions</a> -->
                   <!-- <a href="#"><span class="fa fa-calendar mr-1"></span>Book Free Sessions</a> <br> -->
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
@@ -951,7 +961,8 @@
             <h2 class="ftco-heading-2">Explore</h2>
             <ul class="list-unstyled">
               <!-- <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About</a></li> -->
-              <li><a href="classes.html"><span class="fa fa-chevron-right mr-2"></span>Classes</a></li>
+              <li><a href="https://ithiyoga.zohobookings.in/#/customer/ithiyoga"><span
+                    class="fa fa-chevron-right mr-2"></span>Classes</a></li>
               <li><a href="contact.html"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
               <!-- <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Schedule</a></li> -->
               <!-- <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog</a></li> -->
@@ -1008,9 +1019,6 @@
   <script src="js/7399-js-jquery.magnific-popup.min.js"></script>
   <script src="js/232-js-jquery.animateNumber.min.js"></script>
   <script src="js/2260-js-scrollax.min.js"></script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&amp;sensor=false"></script>
-  <script src="js/7114-js-google-map.js"></script>
   <script src="js/9451-js-main.js"></script>
   <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854"
     integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg=="
