--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Yogabest - Free Bootstrap 4 Template by Colorlib</title>
+	<title>ithiyoga - Every posture as a prayer</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700&amp;display=swap"
@@ -15,9 +15,35 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/dev.css">
 	<script defer referrerpolicy="origin" src="js/s.js"></script>
-	<script
-		nonce="040d849b-0597-44a2-a35b-fdf72a0d36ab">(function (w, d) { !function (db, dc, dd, de) { db[dd] = db[dd] || {}; db[dd].executed = []; db.zaraz = { deferred: [], listeners: [] }; db.zaraz.q = []; db.zaraz._f = function (df) { return async function () { var dg = Array.prototype.slice.call(arguments); db.zaraz.q.push({ m: df, a: dg }) } }; for (const dh of ["track", "set", "debug"]) db.zaraz[dh] = db.zaraz._f(dh); db.zaraz.init = () => { var di = dc.getElementsByTagName(de)[0], dj = dc.createElement(de), dk = dc.getElementsByTagName("title")[0]; dk && (db[dd].t = dc.getElementsByTagName("title")[0].text); db[dd].x = Math.random(); db[dd].w = db.screen.width; db[dd].h = db.screen.height; db[dd].j = db.innerHeight; db[dd].e = db.innerWidth; db[dd].l = db.location.href; db[dd].r = dc.referrer; db[dd].k = db.screen.colorDepth; db[dd].n = dc.characterSet; db[dd].o = (new Date).getTimezoneOffset(); if (db.dataLayer) for (const dp of Object.entries(Object.entries(dataLayer).reduce(((dq, dr) => ({ ...dq[1], ...dr[1] })), {}))) zaraz.set(dp[0], dp[1], { scope: "page" }); db[dd].q = []; for (; db.zaraz.q.length;) { const ds = db.zaraz.q.shift(); db[dd].q.push(ds) } dj.defer = !0; for (const dt of [localStorage, sessionStorage]) Object.keys(dt || {}).filter((dv => dv.startsWith("_zaraz_"))).forEach((du => { try { db[dd]["z_" + du.slice(7)] = JSON.parse(dt.getItem(du)) } catch { db[dd]["z_" + du.slice(7)] = dt.getItem(du) } })); dj.referrerPolicy = "origin"; dj.src = "/cdn-cgi/zaraz/s.js?z=" + btoa(encodeURIComponent(JSON.stringify(db[dd]))); di.parentNode.insertBefore(dj, di) };["complete", "interactive"].includes(dc.readyState) ? zaraz.init() : db.addEventListener("DOMContentLoaded", zaraz.init) }(w, d, "zarazData", "script"); })(window, document);</script>
+	<script>
+		// Function to open the iframe popup
+		function openIframePopup() {
+			var iframePopup = document.getElementById("iframePopupContainer");
+			iframePopup.style.display = "block";
+			document.body.style.overflow = "hidden"; /* Disable scrolling on the background */
+		}
+
+		// Function to close the iframe popup
+		function closeIframePopup() {
+			var iframePopup = document.getElementById("iframePopupContainer");
+			iframePopup.style.display = "none";
+			document.body.style.overflow = "auto"; /* Enable scrolling on the background */
+		}
+
+		// Function to open the popup
+		function openQuotePopup() {
+			var popup = document.getElementById("quotePopupContainer");
+			popup.style.display = "flex"; /* Display as a flex container */
+		}
+
+		// Function to close the popup
+		function closeQuotePopup() {
+			var popup = document.getElementById("quotePopupContainer");
+			popup.style.display = "none";
+		}
+	</script>
 </head>
 
 <body>
@@ -25,9 +51,11 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span
-							class="mailus">email us:</span> <a href="#"><span class="__cf_email__"
-								data-cfemail="95f0f8f4fcf9e6f4f8e5f9f0d5f0f8f4fcf9bbf6faf8">[email protected]</span></a>
+					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a target="_blank"
+							href="https://api.whatsapp.com/send?phone=918105589596&text=Hi">+91 8105589596</a> or <span
+							class="mailus">email us:</span> <a target="_blank"
+							href="mailto:shravyashageru@gmail.com"><span
+								class="__cf_email__">shravyashageru@gmail.com</span></a>
 					</p>
 				</div>
 				<div class="col-12 col-md d-flex justify-content-md-end">
@@ -49,7 +77,8 @@
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Yogabest</a>
+			<!-- <img src="images/ithiyoga-bg.png" width="80" height="80"> -->
+			<a class="navbar-brand" href="index.html">ithiyoga</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fa fa-bars"></span> Menu
@@ -57,12 +86,15 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="trainer.html" class="nav-link">Trainer</a></li>
-					<li class="nav-item"><a href="classes.html" class="nav-link">Classes</a></li>
-					<li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+					<!-- <li class="nav-item"><a href="about.html" class="nav-link">About</a></li> -->
+					<!-- <li class="nav-item"><a href="trainer.html" class="nav-link">Trainer</a></li> -->
+					<li class="nav-item"><a href="https://ithiyoga.zohobookings.in/#/customer/ithiyoga"
+							class="nav-link">Classes</a></li>
+					<!-- <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li> -->
+					<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
 					<li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="" onclick="openQuotePopup(); return false;" class="nav-link">Quote</a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -82,53 +114,55 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Qoute Popup container -->
+	<div style="display: none;" class="quote-popup-container" id="quotePopupContainer">
+		<div class="quote-popup-content">
+			<div>
+				<div class="row justify-content-start pb-3">
+					<div class="col-md-12 heading-section ftco-animate">
+						<div class="quote-popup-header">
+							<h2 class="mb-4"></h2>
+							<span class="quote-close-button" onclick="closeQuotePopup()">&times;</span>
+						</div>
+						<h2 class="mb-4">Welcome to ithi</h2>
+						<div class="d-flex about">
+							<h3 style="font-style: italic;">"I am standing on my own altar, The Poses are my prayers"
+							</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-12">
 					<div class="wrapper">
 						<div class="row mb-5">
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-									<div class="icon d-flex align-items-center justify-content-center">
-										<span class="fa fa-map-marker"></span>
-									</div>
-									<div class="text">
-										<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3">
+							<div class="col-md-6">
 								<div class="dbox w-100 text-center">
 									<div class="icon d-flex align-items-center justify-content-center">
 										<span class="fa fa-phone"></span>
 									</div>
 									<div class="text">
-										<p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+										<p><span>Phone:</span> <a target="_blank"
+												href="https://api.whatsapp.com/send?phone=918105589596&text=Hi">+91
+												8105589596</a></p>
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-6">
 								<div class="dbox w-100 text-center">
 									<div class="icon d-flex align-items-center justify-content-center">
 										<span class="fa fa-paper-plane"></span>
 									</div>
 									<div class="text">
-										<p><span>Email:</span> <a
-												href="/cdn-cgi/l/email-protection#bbd2d5ddd4fbc2d4cec9c8d2cfde95d8d4d6"><span
-													class="__cf_email__"
-													data-cfemail="b3daddd5dcf3cadcc6c1c0dac7d69dd0dcde">[email protected]</span></a>
+										<p><span>Email:</span> <a target="_blank"
+												href="mailto:shravyashageru@gmail.com">shravyashageru@gmail.com</span></a>
 										</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-									<div class="icon d-flex align-items-center justify-content-center">
-										<span class="fa fa-globe"></span>
-									</div>
-									<div class="text">
-										<p><span>Website</span> <a href="#">yoursite.com</a></p>
 									</div>
 								</div>
 							</div>
@@ -190,19 +224,16 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-12 mt-5">
-					<div id="map" class="bg-white"></div>
-				</div>
 			</div>
 		</div>
 	</section>
 	<footer class="ftco-footer">
 		<div class="container">
 			<div class="row mb-5 justify-content-between">
-				<div class="col-sm-12 col-md">
+				<div class="col-sm-12 col-md-4">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2 logo"><a href="#">Yogabest</a></h2>
-						<p>Far far away, behind the word mountains, far from the countries.</p>
+						<h2 class="ftco-heading-2 logo"><a href="#">ithiyoga</a></h2>
+						<p>Every posture as a prayer.</p>
 						<ul class="ftco-footer-social list-unstyled mt-2">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -210,57 +241,60 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-4">
-					<div class="ftco-footer-widget mb-4 ml-md-4">
-						<h2 class="ftco-heading-2">Recent Blog</h2>
-						<div class="block-21 mb-4 d-flex">
-							<a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
-							<div class="text">
-								<h3 class="heading"><a href="#">Yoga practices to boost happiness</a></h3>
-								<div class="meta">
-									<div><a href="#"><span class="fa fa-calendar"></span> Oct. 06, 2020</a></div>
-									<div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-									<div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
-								</div>
-							</div>
-						</div>
-						<div class="block-21 mb-4 d-flex">
-							<a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
-							<div class="text">
-								<h3 class="heading"><a href="#">Yoga practices to boost happiness</a></h3>
-								<div class="meta">
-									<div><a href="#"><span class="fa fa-calendar"></span> Oct. 06, 2020</a></div>
-									<div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-									<div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
-								</div>
-							</div>
-						</div>
+				<!-- <div class="col-sm-12 col-md-4">
+			  <div class="ftco-footer-widget mb-4 ml-md-4">
+				<h2 class="ftco-heading-2">Recent Blog</h2>
+				<div class="block-21 mb-4 d-flex">
+				  <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);" href="yogabest.html"></a>
+				  <div class="text">
+					<h3 class="heading"><a href="#">Yoga practices to boost happiness</a></h3>
+					<div class="meta">
+					  <div><a href="#"><span class="fa fa-calendar"></span> Oct. 06, 2020</a></div>
+					  <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
+					  <div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
 					</div>
+				  </div>
 				</div>
-				<div class="col-sm-12 col-md-2">
+				<div class="block-21 mb-4 d-flex">
+				  <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);" href="yogabest.html"></a>
+				  <div class="text">
+					<h3 class="heading"><a href="#">Yoga practices to boost happiness</a></h3>
+					<div class="meta">
+					  <div><a href="#"><span class="fa fa-calendar"></span> Oct. 06, 2020</a></div>
+					  <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
+					  <div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div> -->
+				<div class="col-sm-12 col-md-4">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Explore</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Classes</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Schedule</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog</a></li>
+							<!-- <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About</a></li> -->
+							<li><a href="https://ithiyoga.zohobookings.in/#/customer/ithiyoga"><span
+										class="fa fa-chevron-right mr-2"></span>Classes</a></li>
+							<li><a href="contact.html"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
+							<!-- <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Schedule</a></li> -->
+							<!-- <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog</a></li> -->
 						</ul>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md">
+				<div class="col-sm-12 col-md-4">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map marker"></span><span class="text">203 Fake St. Mountain
-										View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
-								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span
-											class="text"><span class="__cf_email__"
-												data-cfemail="dcb5b2bab39ca5b3a9aeb8b3b1bdb5b2f2bfb3b1">[email protected]</span></span></a>
+								<!-- <li><span class="icon fa fa-map marker"></span><span class="text">203 Fake St. Mountain View, San
+						Francisco, California, USA</span></li> -->
+								<li><a target="_blank"
+										href="https://api.whatsapp.com/send?phone=918105589596&text=Hi"><span
+											class="icon fa fa-phone"></span><span class="text">+91 8105589596</span></a>
+								</li>
+								<li><a target="_blank" href="mailto:shravyashageru@gmail.com"><span
+											class="icon fa fa-paper-plane pr-4"></span><span
+											class="text"><span>shravyashageru@gmail.com</span></span></a>
 								</li>
 							</ul>
 						</div>
@@ -273,11 +307,9 @@
 				<div class="row">
 					<div class="col-md-12">
 						<p class="mb-0" style="color: rgba(255,255,255,.5);">
-							Copyright ©
-							<script data-cfasync="false" src="js/email-decode.min.js"></script>
-							<script>document.write(new Date().getFullYear());</script>2023 All rights reserved | This
-							template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a
-								href="https://colorlib.com" target="_blank" rel="nofollow noopener">Colorlib</a>
+							Copyright &copy;
+							2023 All rights reserved
+							<i class="fa fa-heart color-danger" aria-hidden="true"></i> by ithiyoga</a>
 						</p>
 					</div>
 				</div>
@@ -301,24 +333,17 @@
 	<script src="js/jquery.magnific-popup.min.js"></script>
 	<script src="js/jquery.animateNumber.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&amp;sensor=false"></script>
-	<script src="js/google-map.js"></script>
 	<script src="js/main.js"></script>
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-
-		gtag('config', 'UA-23581568-13');
-	</script>
 	<script defer
 		src="https://static.cloudflareinsights.com/beacon.min.js/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854"
-		data-cf-beacon="{"
-		rayId":"800d9a37af96b76a","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2023.8.0","si":100}"
-		crossorigin="anonymous"></script>
+		integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg=="
+		data-cf-beacon='{"rayId":"800c4dd23fb1306f","version":"2023.8.0","b":1,"token":"cd0b4b3a733644fc843ef0b185f98241","si":100}'
+		crossorigin="anonymous">
+		</script>
+	<script
+		type="text/javascript">!function (t, e) { t.artibotApi = { l: [], t: [], on: function () { this.l.push(arguments) }, trigger: function () { this.t.push(arguments) } }; var a = !1, i = e.createElement("script"); i.async = !0, i.type = "text/javascript", i.src = "https://app.artibot.ai/loader.js", e.getElementsByTagName("head").item(0).appendChild(i), i.onreadystatechange = i.onload = function () { if (!(a || this.readyState && "loaded" != this.readyState && "complete" != this.readyState)) { new window.ArtiBot({ i: "b92ba74d-e6a9-4199-924b-b8d8fc4591d4" }); a = !0 } } }(window, document);</script>
+
 
 </body>
 
