Redirect them to contact page after form submission

--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
 										id="contactForm" name="contactForm" class="contactForm">
 										<div class="row">
 											<input type="hidden" name="_next"
-												value="https://shubh261096.github.io/ithiyoga/contact.html">
+												value="https://ithiyoga.com/contact.html">
 											<input type="hidden" name="_captcha" value="false">
 											<input type="hidden" name="_template" value="table">
 											<div class="col-md-6">
