--- a/contact.html
+++ b/contact.html
@@ -182,14 +182,14 @@
 												<div class="form-group">
 													<label class="label" for="name">Full Name</label>
 													<input type="text" class="form-control" name="name" id="name"
-														placeholder="Name">
+														placeholder="Name" required>
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
 													<label class="label" for="email">Email Address</label>
 													<input type="email" class="form-control" name="email" id="email"
-														placeholder="Email">
+														placeholder="Email" required>
 												</div>
 											</div>
 											<div class="col-md-12">
