--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/dev.css">
+	<link rel="icon" href="images/ithiyoga.png" type="image/icon type">
 	<script defer referrerpolicy="origin" src="js/s.js"></script>
 	<script>
 		// Function to open the iframe popup
