--- a/contact.html
+++ b/contact.html
@@ -219,7 +219,7 @@
 								</div>
 							</div>
 							<div class="col-md-5 d-flex align-items-stretch">
-								<div class="info-wrap w-100 p-5 img" style="background-image: url(images/bg_1.jpg);">
+								<div class="info-wrap w-100 p-5 img" style="background-image: url(images/image_3.jpg);">
 								</div>
 							</div>
 						</div>
