--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
           <div class="row d-flex">
             <div class="col-md-6 d-flex align-items-stretch">
               <div class="img d-flex align-items-center align-self-stretch justify-content-center"
-                style="background-image:url(images/about.jpg);">
+                style="background-image:url(images/yoga_pose_bg.jpg);">
                 <div class="year-stablish text-center">
                   <div class="icon2"><span class="flaticon-yoga-1"></span></div>
                   <div class="text">
                     <strong class="number" data-number="6">0</strong>
-                    <span>Year Of<br> Experienced</span>
+                    <span>Years Of<br> Experience</span>
                   </div>
                 </div>
               </div>
@@ -232,7 +232,7 @@
             </div>
             <div class="text pl-3">
               <strong class="number" data-number="5000">0</strong>
-              <span>Yoga Conducted</span>
+              <span>Yoga Classes Conducted</span>
             </div>
           </div>
         </div>
@@ -242,7 +242,7 @@
             </div>
             <div class="text pl-3">
               <strong class="number" data-number="6">0</strong>
-              <span>Years of Experienced</span>
+              <span>Years of Experience</span>
             </div>
           </div>
         </div>
@@ -251,7 +251,7 @@
             <div class="icon d-flex align-items-center justify-content-center"><span
                 class="flaticon-mindfulness"></span></div>
             <div class="text pl-3">
-              <strong class="number" data-number="1000">0</strong>
+              <strong class="number" data-number="1276">0</strong>
               <span>Happy Customers</span>
             </div>
           </div>
@@ -304,7 +304,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="classes w-100 ftco-animate">
-            <a href="#" class="img w-100" style="background-image: url(images/classes-1.jpg);"></a>
+            <a href="#" class="img w-100" style="background-image: url(images/private_bg.jpg);"></a>
             <div class="text w-100 text-center">
               <div class="meta">
                 <p>
@@ -324,7 +324,7 @@
         </div>
         <div class="col-md-4">
           <div class="classes w-100 ftco-animate">
-            <a href="#" class="img w-100" style="background-image: url(images/classes-2.jpg);"></a>
+            <a href="#" class="img w-100" style="background-image: url(images/pregnant_bg.jpg);"></a>
             <div class="text w-100 text-center">
               <div class="meta">
                 <p>
@@ -343,7 +343,7 @@
         </div>
         <div class="col-md-4">
           <div class="classes w-100 ftco-animate">
-            <a href="#" class="img w-100" style="background-image: url(images/classes-3.jpg);"></a>
+            <a href="#" class="img w-100" style="background-image: url(images/thyroid_bg.jpg);"></a>
             <div class="text w-100 text-center">
               <div class="meta">
                 <p>
@@ -381,7 +381,7 @@
         </div>
         <div class="col-md-4">
           <div class="classes w-100 ftco-animate">
-            <a href="#" class="img w-100" style="background-image: url(images/classes-5.jpg);"></a>
+            <a href="#" class="img w-100" style="background-image: url(images/yoga_therapy.jpg);"></a>
             <div class="text w-100 text-center">
               <div class="meta">
                 <p>
@@ -400,7 +400,7 @@
         </div>
         <div class="col-md-4">
           <div class="classes w-100 ftco-animate">
-            <a href="#" class="img w-100" style="background-image: url(images/classes-6.jpg);"></a>
+            <a href="#" class="img w-100" style="background-image: url(images/pcos_bg.jpg);"></a>
             <div class="text w-100 text-center">
               <div class="meta">
                 <p>
@@ -414,7 +414,7 @@
                   <!-- <a href="#" class="meta-chat"><span class="fa fa-clock-o mr-1"></span> 8:00 am- 9:00am</a> -->
                 </p>
               </div>
-              <h3><a href="#">Yoga Restore</a></h3>
+              <h3><a href="#">Yoga for PCOS/PCOD</a></h3>
             </div>
           </div>
         </div>
