Changes for chatbot

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,21 @@
 	<link rel="stylesheet" href="css/dev.css">
 	<link rel="icon" href="images/ithiyoga.png" type="image/icon type">
 	<script defer referrerpolicy="origin" src="js/s.js"></script>
+	<script type="application/javascript">
+		window.tiledeskSettings =
+		{
+			projectid: "65001237a994850013d3f7f7"
+		};
+		(function (d, s, id) {
+			var w = window; var d = document; var i = function () { i.c(arguments); };
+			i.q = []; i.c = function (args) { i.q.push(args); }; w.Tiledesk = i;
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s);
+			js.id = id; js.async = true; js.src = "https://widget.tiledesk.com/v6/launch.js";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'tiledesk-jssdk'));
+	</script>
 	<script>
 		// Function to open the iframe popup
 		function openIframePopup() {
@@ -175,8 +190,7 @@
 									<form action="https://formsubmit.co/76dd13ac2cd85c8b6e4cdb7ee8753f28" method="POST"
 										id="contactForm" name="contactForm" class="contactForm">
 										<div class="row">
-											<input type="hidden" name="_next"
-												value="https://ithiyoga.com/contact.html">
+											<input type="hidden" name="_next" value="https://ithiyoga.com/contact.html">
 											<input type="hidden" name="_captcha" value="false">
 											<input type="hidden" name="_template" value="table">
 											<div class="col-md-6">
@@ -342,9 +356,9 @@
 		data-cf-beacon='{"rayId":"800c4dd23fb1306f","version":"2023.8.0","b":1,"token":"cd0b4b3a733644fc843ef0b185f98241","si":100}'
 		crossorigin="anonymous">
 		</script>
-	<script
+	<!-- <script
 		type="text/javascript">!function (t, e) { t.artibotApi = { l: [], t: [], on: function () { this.l.push(arguments) }, trigger: function () { this.t.push(arguments) } }; var a = !1, i = e.createElement("script"); i.async = !0, i.type = "text/javascript", i.src = "https://app.artibot.ai/loader.js", e.getElementsByTagName("head").item(0).appendChild(i), i.onreadystatechange = i.onload = function () { if (!(a || this.readyState && "loaded" != this.readyState && "complete" != this.readyState)) { new window.ArtiBot({ i: "b92ba74d-e6a9-4199-924b-b8d8fc4591d4" }); a = !0 } } }(window, document);</script>
-
+ -->
 
 </body>
 
